--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
+    "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
     "react-router": "^7.6.2",
     "react-toastify": "^11.0.5",
