--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CloudinarySettings": {
+    "CloudName": "dtbmgqthk",
+    "ApiKey": "325371921469399",
+    "ApiSecret": "XRPdpyNoF0AnQER-MNv1kl3rDH4"
+  },
   "AllowedHosts": "*"
 }
