--- a/client/package.json
+++ b/client/package.json
@@ -20,13 +20,16 @@
     "@tanstack/react-query": "^5.80.6",
     "@tanstack/react-query-devtools": "^5.80.6",
     "axios": "^1.9.0",
+    "cropperjs": "^1.5.13",
     "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
     "react": "^19.1.0",
     "react-calendar": "^6.0.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.57.0",
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
