--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@mui/x-date-pickers": "^8.5.1",
+    "@tailwindcss/cli": "^4.1.10",
+    "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-query": "^5.80.6",
     "@tanstack/react-query-devtools": "^5.80.6",
     "axios": "^1.9.0",
@@ -32,10 +34,12 @@
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.57.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
     "react-router": "^7.6.2",
     "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.1.10",
     "zod": "^3.25.56"
   },
   "devDependencies": {
